@@ -1,3 +1,14 @@
+2011-10-07  Adam Barth  <abarth@webkit.org>
+
+        Add a Content-Security-Policy to garden-o-matic
+        https://bugs.webkit.org/show_bug.cgi?id=69668
+
+        Reviewed by David Levin.
+
+        This will help mitigate cross-site script and will also help us dogfood CSP.
+
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/garden-o-matic.html:
+
 2011-10-07  Raphael Kubo da Costa  <kubo@profusion.mobi>
 
         [EFL] DRT: Add DumpRenderTreeChrome.{cpp,h}
